<resources>
    <string name="app_name">E-Kriminal</string>
    <string name="txt_title">Silahkan Login</string>
    <string name="hint_email">Email</string>

    <string name="no_hp">No. Hp</string>
    <string name="btn_login">Login</string>
    <string name="btn_regis">Register</string>
    <string name="txt_option_register">Belum Mempunyai Akun? Register Disini</string>

    <string name="txt_titleR">Silahkan Lengkapi Form Di Bawah</string>
    <string name="nama">Nama</string>
    <string name="btn_register">Register</string>
    <string name="txt_option">Sudah Mempunyai Akun?</string>
    <string name="txt_option_login">Login disini</string>
    <string name="password">Password</string>
    <string name="title_activity_beranda">BerandaActivity</string>

    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_lapor">Lapor</string>
    <string name="title_aspirasi">Aspirasi</string>

    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="data_tidak_tersedia">Data Tidak Tersedia</string>


</resources>